# StrategyGameJam

./: CMakeLists.txt
src/: main.cpp
src/AI/: AI.cpp  AI.hpp  AIComponent.cpp  AIComponent.hpp
src/Engine/: ActorFactory.cpp  ActorFactory.hpp  Engine.cpp  Engine.hpp  GObject.cpp  GObject.hpp  GObjectComponent.cpp  GObjectComponent.hpp  GWorld.cpp  GWorld.hpp  GameObject.cpp  GameObject.hpp  GameObjectComponent.cpp  GameObjectComponent.hpp  GameState.cpp  GameState.hpp  GameSystem.hpp  Types.hpp  World.cpp  World.hpp  WorldLoader.cpp  WorldLoader.hpp
src/Graphics/: Graphics.cpp  Graphics.hpp  GraphicsComponent.cpp  GraphicsComponent.hpp  Renderer.cpp  Renderer.hpp  Sprite.cpp  Sprite.hpp
src/Input/: Input.cpp  Input.hpp  InputComponent.cpp  InputComponent.hpp  InputTypes.hpp
src/Objects/: Actor.cpp  Actor.hpp  Camera.cpp  Camera.hpp  DrawableObject.cpp  DrawableObject.hpp  ResourcePoint.cpp  ResourcePoint.hpp  Structure.cpp  Structure.hpp
src/Physics/: Physics.cpp  Physics.hpp  PhysicsComponent.cpp  PhysicsComponent.hpp
src/UI/: UI.cpp  UI.hpp  UIComponent.cpp  UIComponent.hpp  UIObject.hpp
src/Util/: SDLMath.cpp  SDLMath.hpp
